add health checks and grpc interceptors

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/followdb?sslmode=disable
 GRPC_PORT=50051
+HEALTH_PORT=8080
 LOG_LEVEL=info
